js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/callexpression-templateliteral.js
assert
.
throws
(
TypeError
(
)
=
>
{
import
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
)
;
assert
.
throws
(
TypeError
(
)
=
>
{
import
(
'
.
/
empty_FIXTURE
.
js
'
)
something
;
}
)
;
assert
.
throws
(
TypeError
(
)
=
>
{
import
(
'
.
/
empty_FIXTURE
.
js
'
)
{
42
}
;
}
)
;
reportCompare
(
0
0
)
;
