js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-arrow-function-return-await-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
(
async
(
)
=
>
await
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
)
